2013-01-03  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/robot.pm: Return slot in error for:
		the requested volume is in drive $drive, which this
		changer instance cannot access
	* perl/Amanda/Taper/Scan/traditional.pm: Continue scan if this error.
	* perl/Amanda/Taper/Scribe.pm: log message.
	* installcheck/Amanda_Taper_Scan_lexical.pl,
	  installcheck/Amanda_Taper_Scan_oldest.pl,
	  installcheck/Amanda_Taper_Scan_traditional.pl: Check it.

2013-01-03  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3-device.c, device-src/s3.c: hanlde chunked
	  transfer-encoding,
	* device-src/s3.h (s3_upload): Add chunked argument.
	* man/xml-source/amanda-devices.7.xml: Document new CHUNKER s3
	  device-property.

2013-01-03  Jean-Louis Martineau <martineau@zmanda.com>
	* recover-src/extract_list.c: Display the size restored.

2012-12-27  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amrmtape.pl: Add the pid on the temporary filename.

2012-12-27  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/util.c (make_amanda_tmpdir): New function to create the
	  AMANDA_TMPDIR directory.
	* common-src/util.h (make_amanda_tmpdir): Add prototype.
	* common-src/debug.c (debug_open): Call make_amanda_tmpdir().


2012-12-24  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c (tape_action): Do not count free tape space if
	  exceed max-dle-by-volume.

2012-12-19  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/conffile.c: Add a new RETRY-DUMP setting in a dumptype.
	* common-src/conffile.h: Define DUMPTYPE_RETRY_DUMP.
	* man/xml-source/amanda.conf.5.xml: Document it
	* perl/Amanda/Config.swg: Add DUMPTYPE_RETRY_DUMP.
	* server-src/diskfile.h (disk_t): Add retry_dump.
	* server-src/diskfile.c: Set disk->retry_dump.
	* server-src/driver.c: Use retry_dump
	* NEWS: Add it.

2012-12-19  Jean-Louis Martineau <martineau@zmanda.com>
	* NEWS: Add MATCH-AUTOLABEL labelstr.
