@@ -48,26 +48,6 @@ my $changer_name;
 my $keep_label;
 my $verbose = 1;
 my $help;
-my $logdir;
-my $log_file;
-my $log_created = 0;
-
-sub die_handler {
-    if ($log_created == 1) {
-        unlink $log_file;
-        $log_created = 0;
-    }
-}
-$SIG{__DIE__} = \&die_handler;
-
-sub int_handler {
-    if ($log_created == 1) {
-        unlink $log_file;
-        $log_created = 0;
-    }
-    die "Interrupted\n";
-}
-$SIG{INT} = \&int_handler;
 
 sub usage() {
     print <<EOF
@@ -150,26 +130,6 @@ if ($cfgerr_level >= $CFGERR_WARNINGS) {
 }
 
 Amanda::Util::finish_setup($RUNNING_AS_DUMPUSER);
-$logdir = config_dir_relative(getconf($CNF_LOGDIR));
-$log_file = "$logdir/log";
-
-if ($erase) {
-    # Check for log file existance
-    if (-e $log_file) {
-        `amcleanup -p $config_name`;
-    }
-
-    if (-e $log_file) {
-        local *LOG;
-        open(LOG,  $log_file);
-        my $info_line = <LOG>;
-        close LOG;
-        $info_line =~ /^INFO (.*) .* pid .*$/;
-        my $process_name = $1;
-        print "$process_name is running, or you must run amcleanup\n";
-        exit 1;
-    }
-}
 
 # amadmin may later try to load this and will die if it has errors
 # load it now to catch the problem sooner (before we might erase data)
@@ -296,11 +256,6 @@ my $scrub_db = sub {
 
 my $erase_volume = make_cb('erase_volume' => sub {
     if ($erase) {
-        $log_created = 1;
-        local *LOG;
-        open(LOG, ">$log_file");
-        print LOG "INFO amrmtape amrmtape pid $$\n";
-        close LOG;
 	my $chg = Amanda::Changer->new($changer_name, tapelist => $tapelist);
 	$chg->load(
 	    'label' => $label,
@@ -350,10 +305,5 @@ my $erase_volume = make_cb('erase_volume' => sub {
 # kick things off
 $erase_volume->();
 Amanda::MainLoop::run();
-
-if ($log_created == 1) {
-    unlink $log_file;
-    $log_created = 0;
-}
 
 Amanda::Util::finish_application();
