@@ -1,3 +1,6 @@
+2013-01-04  Jean-Louis Martineau <martineau@zmanda.com>
+	* server-src/amrmtape.pl: Do not check the 'log' file.
+
 2013-01-03  Jean-Louis Martineau <martineau@zmanda.com>
 	* perl/Amanda/Changer/robot.pm: Return slot in error for:
 		the requested volume is in drive $drive, which this
